Set main scene, and add input mappings

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,2 +1,12 @@
+[application]
+
 name="binary-fusion"
+main_scene="res://levels/level.xml"
 icon="icon.png"
+
+[input]
+
+move_up=[key(Up), key(W)]
+move_down=[key(Down), key(S)]
+move_left=[key(Left), key(A)]
+move_right=[key(Right), key(D)]
