Add toggle_color to input map

--- a/engine.cfg
+++ b/engine.cfg
@@ -10,3 +10,4 @@ move_up=[key(Up), key(W)]
 move_down=[key(Down), key(S)]
 move_left=[key(Left), key(A)]
 move_right=[key(Right), key(D)]
+toggle_color=[key(X)]
