Change width, height and add shoot input

--- a/engine.cfg
+++ b/engine.cfg
@@ -4,6 +4,11 @@ name="binary-fusion"
 main_scene="res://levels/level.xml"
 icon="icon.png"
 
+[display]
+
+width=400
+height=800
+
 [input]
 
 move_up=[key(Up), key(W)]
@@ -11,3 +16,4 @@ move_down=[key(Down), key(S)]
 move_left=[key(Left), key(A)]
 move_right=[key(Right), key(D)]
 toggle_color=[key(X)]
+shoot=[key(Z)]
